testing/invalid_syntax/err4.java
class Main {
    static void run() {
        int b = 42;
        ;
    }
}
